<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:background="@color/white"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/addTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
    <Button
            android:text="@string/addTransferButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@null"
            android:textColor="@color/darkGrey"
            android:id="@+id/addButton"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/editDate"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:hint="@string/titleHint" android:inputType="textPersonName"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/editAmount"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editTitle"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/amountHint" android:inputType="numberSigned|numberDecimal"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/editDate" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editAmount"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/dateHint" android:singleLine="false"
            android:inputType="date"/>
</android.support.constraint.ConstraintLayout>